SSDM-12286 Added export support for data sets.